Ajout de la  derniere ppartie du projet

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
     <div class="container second">
         <h2>Meilleur Categories</h2>
         <div class="row fisrt-row justify-content-between ">
-            <div class=" col-md-6 col-lg-3  ">
+            <div class=" col-md-6 col-lg-3 m-bloc">
                 <div class="description-one__illustration">
                         <img src="images/desktop.png" alt="destop" class="m-img">
                 </div>
@@ -547,7 +547,7 @@
                     <span>Microsoft expert1</span>
                 </div>
             </div>
-            <div class=" col-md-6 col-lg-3   ">
+            <div class=" col-md-6 col-lg-3 m-bloc">
                 <div class="description-one__illustration">
                     <img src="images/desktop.png" alt="desktop" class="m-img">
                 </div>
@@ -555,7 +555,7 @@
                     <span>Microsoft expert1</span>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-3 "> 
+            <div class="col-md-6 col-lg-3 m-bloc"> 
                 <div class="description-one__illustration">
                     <img src="images/desktop.png" alt="desktop" class="m-img">
                 </div>
@@ -563,7 +563,7 @@
                     <span>Microsoft expert1</span>
                 </div>
             </div>
-            <div class=" col-md-6 col-lg-3">
+            <div class=" col-md-6 col-lg-3 m-bloc">
                 <div class="description-one__illustration">
                     <img src="images/desktop.png" alt="desktop" class="m-img">
                 </div>
@@ -573,7 +573,7 @@
             </div>
         </div>
         <div class="row fisrt-row">
-            <div class=" col-md-6 col-lg-3 col-md-3  ">
+            <div class=" col-md-6 col-lg-3 col-md-3 m-bloc">
                 <div class="description-one__illustration">
                     <img src="images/desktop.png" alt="destop" class="m-img">
                 </div>
@@ -581,7 +581,7 @@
                     <span>Microsoft expert1</span>
                 </div>
             </div>
-            <div class=" col-md-6 col-lg-3 col-md-3  ">
+            <div class=" col-md-6 col-lg-3 col-md-3 m-bloc">
                 <div class="description-one__illustration">
                     <img src="images/desktop.png" alt="desktop" class="m-img">
                 </div>
@@ -589,7 +589,7 @@
                     <span>Microsoft expert1</span>
                 </div>
             </div>
-            <div class=" col-md-6 col-lg-3 "> 
+            <div class=" col-md-6 col-lg-3 m-bloc"> 
                 <div class="description-one__illustration">
                     <img src="images/desktop.png" alt="desktop" class="m-img">
                 </div>
@@ -597,7 +597,7 @@
                     <span>Microsoft expert1</span>
                 </div>
             </div>
-            <div class=" col-md-6 col-lg-3">
+            <div class=" col-md-6 col-lg-3 m-bloc">
                 <div class="description-one__illustration">
                     <img src="images/desktop.png" alt="desktop" class="m-img">
                 </div>
@@ -608,13 +608,210 @@
         </div> 
     </div>
 
+    <!-- Partie 4 : Section Slide -->
+    <div class=" container sectionSlide">
+        <h2>Ce Que Nos Clients Disent</h2>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <!-- First Bloc -->
+                <div class="carousel-item active monCarousel">
+                    <div class="row N-row">
+                        <!-- Temoignage -->
+                        <div class="card maCard NfirstCard">
+                            <div class="card-body B-card-body">
+                                <div class="card-head">
+                                <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle monImage">
+                                <h5>Bah Ismaila</h5>
+                                </div>
+                                <p class="card-text">
+                                    Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                    NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                    Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                    J' envisage d'utiliser Udemy sur le long terme !
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card maCard cardCenter">
+                            <div class="card-body">
+                            <div class="card-head">
+                                <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle  monImage">
+                                <h5>Bah Ismaila</h5>
+                            </div>
+                            <p class="card-text">
+                                Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                J' envisage d'utiliser Udemy sur le long terme !
+                            </p>
+                            </div>
+                        </div>
+                        <div class="card maCard NlastCard">
+                            <div class="card-body">
+                            <div class="card-head">
+                                <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle  monImage">
+                                <h5>Bah Ismaila</h5>
+                            </div>
+                            <p class="card-text">
+                                Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                J' envisage d'utiliser Udemy sur le long terme !
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Second Bloc -->
+                <div class="carousel-item monCarousel">
+                    <div class="row N-row">
+                        <div class="card maCard NfirstCard">
+                        <div class="card-body">
+                            <div class="card-head">
+                            <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle  monImage">
+                            <h5>Bah Ismaila</h5>
+                            </div>
+                            <p class="card-text">
+                                Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                J' envisage d'utiliser Udemy sur le long terme !
+                            </p>
+                        </div>
+                        </div>
+                        <div class="card maCard cardCenter">
+                        <div class="card-body">
+                            <div class="card-head">
+                            <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle  monImage">
+                            <h5>Bah Ismaila</h5>
+                            </div>
+                            <p class="card-text">
+                                Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                J' envisage d'utiliser Udemy sur le long terme !
+                            </p>
+                        </div>
+                        </div>
+                        <div class="card maCard NlastCard">
+                        <div class="card-body">
+                            <div class="card-head">
+                            <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle  monImage">
+                            <h5>Bah Ismaila</h5>
+                            </div>
+                            <p class="card-text">
+                                Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                J' envisage d'utiliser Udemy sur le long terme !
+                            </p>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Third Bloc -->
+                <div class="carousel-item monCarousel">
+                    <div class="row N-row">
+                        <div class="card maCard NfirstCard">
+                        <div class="card-body">
+                            <div class="card-head">
+                            <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle  monImage">
+                            <h5>Bah Ismaila</h5>
+                            </div>
+                            <p class="card-text">
+                                Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                J' envisage d'utiliser Udemy sur le long terme !
+                            </p>
+                        </div>
+                        </div>
+                        <div class="card maCard cardCenter">
+                        <div class="card-body">
+                            <div class="card-head">
+                            <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle  monImage">
+                            <h5>Bah Ismaila</h5>
+                            </div>
+                            <p class="card-text">
+                                Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                J' envisage d'utiliser Udemy sur le long terme !
+                            </p>
+                        </div>
+                        </div>
+                        <div class="card maCard NlastCard">
+                        <div class="card-body">
+                            <div class="card-head">
+                            <img src="images/photo-of-bedroom-1454806.jpg" alt="" class="img-fluid rounded-circle  monImage">
+                            <h5>Bah Ismaila</h5>
+                            </div>
+                            <p class="card-text">
+                                Je travaille dans le secteur de la gestion de projets et j'ai rejoint 
+                                NaN certif-Pro pour obtenir des cours exceptionnels a moindre prix .
+                                Les formateurs sont symphatiques , interessants et a l'ecoute. 
+                                J' envisage d'utiliser Udemy sur le long terme !
+                            </p>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-
-
-
-
-
+    <!-- Footer -->
+    <footer class="B-footer">
+      <div class="container B-container">
+        <div class="row B-footer-link">
+          <div class="col-lg-3  col-sm-6 B-footer-element">
+              <h4>Certification</h4>
+              <ul>
+                <li><a href="#">Entreprise</a></li>
+                <li><a href="#">Forum</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Nous rejoindre</a></li>
+              </ul>
+          </div>
+          <div class="col-lg-3  col-sm-6 B-footer-element">
+            <h4>Entreprise</h4>
+            <ul>
+              <li><a href="#">Business</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3  col-sm-6 B-footer-element">
+            <h4>En plus</h4>
+            <ul>
+              <li><a href="#">Devenir Mentor</a></li>
+              <li><a href="#">Aide & FAQ</a></li>
+              <li><a href="#">Conditions Generales d'utilisation</a></li>
+              <li><a href="#">Politique de protection des données personnelles</a></li>
+              <li><a href="#">Nous contacter</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-sm-6 B-footer-element">
+            <h4>Suivez-Nous</h4>
+            <div class="row">
+              <img src="images/facebook.png" alt="Icon-facebook" class="rounded-circle B-icon-footer">
+              <img src="images/youtub.png" alt="Icon-Youtuube" class="rounded-circle B-icon-footer">
+              <img src="images/linkedin.png" alt="Iicon-Linkedin" class="rounded-circle B-icon-footer">
+            </div>
+            <div class="row">
+              <img src="images/playstore.png" alt="Playstore" class="img-fluid Appstore-footer">
+              <img src="images/playstore.png" alt="Appstore" class="img-fluid Appstore-footer">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--Copyright-->
+      <div class="copyright">
+        <p>Copyright &copy; Tout droit reserver-DevsFront NaN3.20</p>
+      </div>
+    </footer>
 
     <!-- My Scripts -->
     <script src="jquery/jquery.min.js"></script>
