--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <!--Cards Cours-->
                 <div class="row" >
                     <div class="card B-card marge-first-card">
-                        <img src="images/photo-of-bedroom-1454806.jpg" class="img-fluid" alt="">
+                        <img src="images/person-using-laptop-computer-inside-room-936091.jpg" class="img-fluid" alt="">
                         <div class="card-block B-card-block">
                             <h5 class="card-title text-capitalize">
                                 Microsoft office
@@ -151,7 +151,7 @@
                         </span>
                     </div>
                     <div class="card B-card marge-card">
-                        <img src="images/photo-of-bedroom-1454806.jpg" alt="">
+                        <img src="images/photo-of-imac-near-macbook-1029757.jpg" alt="Imac">
                         <div class="card-block B-card-block">
                             <h5 class="card-title text-capitalize">
                                 Microsoft office
@@ -194,7 +194,7 @@
                         </span>
                     </div>
                     <div class="card B-card marge-card">
-                        <img src="images/photo-of-bedroom-1454806.jpg" alt="">
+                        <img src="images/adult-books-business-coffee-374016.jpg" alt="word">
                         <div class="card-block B-card-block">
                             <h5 class="card-title text-capitalize">
                                 Microsoft office
@@ -237,7 +237,7 @@
                         </span>
                     </div>
                     <div class="card B-card marge-card">
-                        <img src="images/photo-of-bedroom-1454806.jpg" alt="">
+                        <img src="images/woman-programming-on-a-notebook-1181359.jpg" alt="python">
                         <div class="card-block B-card-block">
                             <h5 class="card-title text-capitalize">
                                 Microsoft office
@@ -309,7 +309,7 @@
                 <!--Cards Cours-->
                 <div class="row" >
                     <div class="card B-card marge-first-card">
-                        <img src="images/photo-of-bedroom-1454806.jpg" class="img-fluid" alt="">
+                        <img src="images/woman-programming-on-a-notebook-1181359.jpg" class="img-fluid" alt="python">
                         <div class="card-block B-card-block">
                             <h5 class="card-title text-capitalize">
                                 Microsoft office
@@ -352,7 +352,7 @@
                         </span>
                     </div>
                     <div class="card B-card marge-card">
-                        <img src="images/photo-of-bedroom-1454806.jpg" alt="">
+                        <img src="images/photo-of-imac-near-macbook-1029757.jpg" alt="Imac">
                         <div class="card-block B-card-block">
                             <h5 class="card-title text-capitalize">
                                 Microsoft office
@@ -395,7 +395,7 @@
                         </span>
                     </div>
                     <div class="card B-card marge-card">
-                        <img src="images/photo-of-bedroom-1454806.jpg" alt="">
+                        <img src="images/person-using-laptop-computer-inside-room-936091.jpg" alt="word">
                         <div class="card-block B-card-block">
                             <h5 class="card-title text-capitalize">
                                 Microsoft office
@@ -438,7 +438,7 @@
                         </span>
                     </div>
                     <div class="card B-card marge-card">
-                        <img src="images/photo-of-bedroom-1454806.jpg" alt="">
+                        <img src="images/adult-books-business-coffee-374016.jpg" alt="microsoft">
                         <div class="card-block B-card-block">
                             <h5 class="card-title text-capitalize">
                                 Microsoft office
