--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </div>
                     </li>
                     <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-4" type="search" placeholder="Search Certification & Parcours" aria-label="Search">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search Certification & Parcours" aria-label="Search" id="search">
                     </form>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Enseigner sur certification.ci</a>
